--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html> 
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  
-</head>
+<head> 
+  <meta charset="UTF-8"> 
+  <meta name="viewport" content="width=device-width"> 
+  <title>replit</title> 
+  <link rel="stylesheet" href="style.css"> 
+</head> 
 
-<body>
-
-  
+<body> 
+  <h1>¡Hola mundo!</h1> 
+  <img src="Pictures/J - Jewelry.jpg" width="220" alt="Ejemplo de imagen">
+  <h1>Hola mundo</h1>
+  <h1>Hola mundo</h1>
+  <h1>Hola mundo</h1>
+  <h1>Hola mundo</h1>
+  <h2 id="rojo">Hola mundo</h2>
+  <h2 id="button" class="azul">Hola mundo</h2>
+  <h3 class="azul">Hola mundo</h3>
   
   <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
@@ -18,6 +25,7 @@
   teal, blue, blurple, magenta, pink!
   -->
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
